fixed carousel but now it isnt responsive, only fits well on left screen size but overflow becomes scroll on larger sizes

--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,6 +1,6 @@
 .HomeContainer {
 	width: 100%;
-	height: 100%;
+	height: fit-content;
 	top: 0px;
 	display: flex;
 	flex-direction: column;
